deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-along-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: git-along
  template:
    metadata:
      labels:
        app: git-along
    spec:
      containers:
      - name: git-along-container
        image: nginx:latest
        ports:
        - containerPort: 80
