service.yml
apiVersion : v1
kind: Service
metadata:
  name: git-along-Service
spec:
  selector:
    app: git-along 
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
