ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git-along-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: git-along.local
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: git-along-Service
            port:
              number: 80
